K8S/thanos-prometheus/ingress-istio.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "thanos-prometheus"
spec:
  ingressClassName: "istio"
  rules:
    - host: "thanos-prometheus.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "thanos-front"
                port:
                  number: 9090

          - path: "/api/v1/receive"
            pathType: "Exact"
            backend:
              service:
                name: "thanos-receive"
                port:
                  number: 10903
