K8S/thanos-prometheus/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "thanos-prometheus"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "thanos-prometheus.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "thanos-front"
                port:
                  number: 9090
